--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">CaiqiaoLinpan</string>
+    <string name="label_name">Name: </string>
+    <string name="title_activity_personal_detail">PersonalDetail</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="name">Name</string>
 
 
 </resources>
