--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,7 @@
 <resources>
-    <string name="app_name">CaiqiaoLinpan</string>
+    <string name="app_name">相亲相爱一家人</string>
     <string name="label_name">Name: </string>
     <string name="title_activity_personal_detail">PersonalDetail</string>
-
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
 
