[WIP] new page: add contact

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_add_contact">AddContactActivity</string>
     <string name="label_add">add</string>
+    <string name="activity_new_contact_tv_name">name:</string>
+    <string name="activity_new_contact_tv_phone">phone:</string>
+    <string name="activity_new_contact_bt_done">done</string>
 </resources>
