--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,14 +4,13 @@
     <string name="title_activity_personal_detail">PersonalDetail</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_add_contact">AddContactActivity</string>
+    <string name="title_activity_choose_avatar">ChooseAvatarActivity</string>
     <string name="label_add">add</string>
     <string name="activity_new_contact_tv_name">name:</string>
     <string name="activity_new_contact_tv_phone">phone:</string>
     <string name="activity_new_contact_tv_dob">birthday:</string>
     <string name="activity_new_contact_bt_done">done</string>
-    <string name="title_activity_choose_avatar">ChooseAvatarActivity</string>
-    <string name="activity_choose_avatar_popup_title">choose profile picture</string>
+    <string name="activity_choose_avatar_popup_title">choose avatar</string>
 
 
-    <string name="hello_world">Hello world!</string>
 </resources>
